--- a/Code/PgSQL/rdkit/Makefile
+++ b/Code/PgSQL/rdkit/Makefile
@@ -4,8 +4,8 @@
 #USE_INCHI=0
 # USE_AVALON enables the avalon fingerprint; requires rdkit built with avalon support:
 #USE_AVALON=0
-# ENABLE_POPCOUNT enables use of the CPU's popcount instruction:
-#USE_POPCOUNT=0
+# USE_POPCOUNT enables use of the CPU's popcount instruction:
+USE_POPCOUNT=1
 # USE_THREADS links against boost.system; required with non-ancient boost versions if inchi is enabled or the rdkit is built with threadsafe SSS:
 #USE_THREADS=0
 # STATIC_LINK links against the static RDKit libraries:
