switch travis ctests to use two cores

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,4 +75,4 @@ script:
  - make install
  - ls "$PREFIX/lib"
  - ls "$PY_PREFIX/lib"
- - LD_LIBRARY_PATH="$PY_PREFIX/lib:$PREFIX/lib;$SRC_DIR/lib;$LD_LIBRARY_PATH" ctest --output-on-failure
+ - LD_LIBRARY_PATH="$PY_PREFIX/lib:$PREFIX/lib;$SRC_DIR/lib;$LD_LIBRARY_PATH" ctest -j2 --output-on-failure
