--- a/Code/GraphMol/ChemTransforms/CMakeLists.txt
+++ b/Code/GraphMol/ChemTransforms/CMakeLists.txt
@@ -1,9 +1,9 @@
-rdkit_library(ChemTransforms ChemTransforms.cpp MolFragmenter.cpp LINK_LIBRARIES
-  SubstructMatch SmilesParse 
-  ${RDKit_THREAD_LIBS})
+rdkit_library(ChemTransforms ChemTransforms.cpp MolFragmenter.cpp RGroupDecomp.cpp LINK_LIBRARIES 
+SubstructMatch SmilesParse GraphMol RDGeneral ${RDKit_THREAD_LIBS})
 
 rdkit_headers(ChemTransforms.h
    MolFragmenter.h
+   RGroupDecomp.h
    DEST GraphMol/ChemTransforms)
 
 # there's no Wrap subdirectory on the main trunk (but in "minimal" there is)..
