--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,10 +43,9 @@ before_build:
   - cd c:\projects\RDKit\build
   - cmake -G "Visual Studio 12 Win64" -DCMAKE_INSTALL_PREFIX=%P% -DRDK_BUILD_PYTHON_WRAPPERS=OFF -DRDK_BUILD_SWIG_WRAPPERS=OFF -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
 
-## tests disabled because they take too long to run
-#test_script:
-#  - cd c:\projects\RDKit\build
-#  - ctest 
+test_script:
+  - cd c:\projects\RDKit\build
+  - ctest 
 
 # scripts to run after build
 #after_build:
