Add RDK_USE_BOOST_SERIALIZATION configure option (On by default)

--- a/Code/GraphMol/FilterCatalog/CMakeLists.txt
+++ b/Code/GraphMol/FilterCatalog/CMakeLists.txt
@@ -1,11 +1,15 @@
-set(T_LIBS ${Boost_LIBRARIES})
-find_package(Boost 1.39.0 COMPONENTS serialization)
-if (Boost_SERIALIZATION_LIBRARY)
-  set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
-  message("== Using boost serialization library ${Boost_SERIALIZATION_LIBRARY}")
-  ADD_DEFINITIONS("-DRDK_USE_BOOST_SERIALIZATION")
+if(RDK_USE_BOOST_SERIALIZATION)
+    set(T_LIBS ${Boost_LIBRARIES})
+    find_package(Boost 1.39.0 COMPONENTS serialization)
+    if (Boost_SERIALIZATION_LIBRARY)
+      set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
+      message("== Using boost serialization library ${Boost_SERIALIZATION_LIBRARY}")
+      ADD_DEFINITIONS("-DRDK_USE_BOOST_SERIALIZATION")
+    else()
+      message("== Making FilterCatalog without boost Serialization support (MISSING)")
+    endif()
 else()
-  message("== Making FilterCatalog without boost Serialization support")
+      message("== Making FilterCatalog without boost Serialization support")
 endif()
 
 find_package(PythonInterp)
