--- a/Code/GraphMol/FilterCatalog/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/FilterCatalog/Wrap/CMakeLists.txt
@@ -1,10 +1,13 @@
-set(T_LIBS ${Boost_LIBRARIES})
-find_package(Boost 1.39.0 COMPONENTS serialization)
-if (Boost_SERIALIZATION_LIBRARY)
-  set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
-  message("== Using boost serialization library ${Boost_SERIALIZATION_LIBRARY}")
+if(RDK_USE_BOOST_SERIALIZATION)
+    set(T_LIBS ${Boost_LIBRARIES})
+    find_package(Boost 1.39.0 COMPONENTS serialization)
+    if (Boost_SERIALIZATION_LIBRARY)
+      set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
+    else()
+      message("== Making Python FilterCatalog without boost Serialization support (MISSING)")
+    endif()
 else()
-  message("== Making python FilterCatalog without boost Serialization support")
+      message("== Making Python FilterCatalog without boost Serialization support")
 endif()
 
 rdkit_python_extension(rdfiltercatalog
