--- a/Code/GraphMol/FilterCatalog/CMakeLists.txt
+++ b/Code/GraphMol/FilterCatalog/CMakeLists.txt
@@ -1,13 +1,5 @@
-if(RDK_USE_BOOST_SERIALIZATION)
-    set(T_LIBS ${Boost_LIBRARIES})
-    find_package(Boost 1.39.0 COMPONENTS serialization)
-    if (Boost_SERIALIZATION_LIBRARY)
-      set(Boost_LIBRARIES ${T_LIBS} ${Boost_LIBRARIES})
-      message("== Using boost serialization library ${Boost_SERIALIZATION_LIBRARY}")
-      ADD_DEFINITIONS("-DRDK_USE_BOOST_SERIALIZATION")
-    else()
-      message("== Making FilterCatalog without boost Serialization support (MISSING)")
-    endif()
+if(RDK_USE_BOOST_SERIALIZATION AND Boost_SERIALIZATION_LIBRARY)
+    ADD_DEFINITIONS("-DRDK_USE_BOOST_SERIALIZATION")
 else()
       message("== Making FilterCatalog without boost Serialization support")
 endif()
@@ -42,6 +34,6 @@ rdkit_headers(FilterCatalogEntry.h
 add_subdirectory(Wrap)
 
 rdkit_test(filterCatalogTest filtercatalogtest.cpp
-           LINK_LIBRARIES FilterCatalog 
-           Catalogs SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral 
+           LINK_LIBRARIES FilterCatalog
+           Catalogs SubstructMatch FileParsers SmilesParse GraphMol RDGeometryLib RDGeneral
            ${Boost_SERIALIZATION_LIBRARY})
