make it possible to turn off the use of popcnt

--- a/Code/DataStructs/CMakeLists.txt
+++ b/Code/DataStructs/CMakeLists.txt
@@ -1,3 +1,7 @@
+if(RDK_OPTIMIZE_NATIVE)
+  ADD_DEFINITIONS("-DUSE_BUILTIN_POPCOUNT")
+endif()
+
 rdkit_library(DataStructs 
               BitVect.cpp SparseBitVect.cpp ExplicitBitVect.cpp Utils.cpp
               base64.cpp BitOps.cpp DiscreteDistMat.cpp
