- modified BitOps.cpp to get it to work on Windows 32-bit - Integrated the PostgreSQL cartridge build in cmake - Slight modifications to the AvalonTools building procedure - modified UnitTestInchi.py to make it work under Windows   with Python 3.4

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -29,3 +29,6 @@ if(RDK_BUILD_SWIG_WRAPPERS)
   add_subdirectory(JavaWrappers)
 endif()
 
+if(RDK_BUILD_PGSQL)
+  add_subdirectory(PgSQL/rdkit)
+endif(RDK_BUILD_PGSQL)
