--- a/External/AvalonTools/CMakeLists.txt
+++ b/External/AvalonTools/CMakeLists.txt
@@ -1,4 +1,8 @@
 if(RDK_BUILD_AVALON_SUPPORT)
+set(AVALONTOOLS_DIR "$ENV{AVALONTOOLS_DIR}") 
+if(NOT DEFINED ${AVALONTOOLS_DIR})
+  set(AVALONTOOLS_DIR "${CMAKE_SOURCE_DIR}/External/AvalonTools/SourceDistribution")
+endif(NOT DEFINED ${AVALONTOOLS_DIR})
 string(REGEX REPLACE "\\\\" "/" AVALONTOOLS_DIR ${AVALONTOOLS_DIR})
 set(AVALON_SRC_PATH ${AVALONTOOLS_DIR}/common)
 
