- improved Code/PgSQL/rdkit/CMakeLists.txt - improved docs for Avalon and Inchi

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -1,11 +1,10 @@
-include_directories(${PostgreSQL_INCLUDE_DIR}
-              ${PostgreSQL_INCLUDE_DIR}/server)
+include_directories(${PostgreSQL_INCLUDE_DIRS})
 if(WIN32)
   include_directories(${PostgreSQL_INCLUDE_DIR}/server/port/win32)
+  if(MSVC)
+    include_directories(${PostgreSQL_INCLUDE_DIR}/server/port/win32_msvc)
+  endif(MSVC)
 endif(WIN32)
-if(MSVC)
-  include_directories(${PostgreSQL_INCLUDE_DIR}/server/port/win32_msvc)
-endif(MSVC)
 if(RDK_BUILD_AVALON_SUPPORT)
   include_directories(${CMAKE_SOURCE_DIR}/External)
   add_definitions(-DBUILD_AVALON_SUPPORT)
@@ -20,9 +19,9 @@ if(MSVC)
 endif(MSVC)
 link_directories(${PostgreSQL_LIBRARY_DIR})
 add_library(rdkit SHARED
-              adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
-              rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
-target_link_libraries(rdkit postgres)
+            adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
+            rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
+target_link_libraries(rdkit ${PostgreSQL_LIBRARIES})
 set(avalonRegress "")
 set(inchiRegress "")
 if(RDK_BUILD_AVALON_SUPPORT)
@@ -34,45 +33,65 @@ if(RDK_BUILD_INCHI_SUPPORT)
   target_link_libraries(rdkit RDInchiLib Inchi)
 endif(RDK_BUILD_INCHI_SUPPORT)
 target_link_libraries(rdkit MolHash FMCS ChemReactions ChemTransforms
-              FileParsers SmilesParse Fingerprints Subgraphs Descriptors
-              PartialCharges SubstructMatch GraphMol DataStructs Depictor
-              RDGeometryLib RDGeneral)
+                      FileParsers SmilesParse Fingerprints Subgraphs Descriptors
+                      PartialCharges SubstructMatch GraphMol DataStructs Depictor
+                      RDGeometryLib RDGeneral)
 if(RDK_BUILD_THREADSAFE_SSS)
   target_link_libraries(rdkit ${RDKit_THREAD_LIBS})
 endif(RDK_BUILD_THREADSAFE_SSS)
 
-# The test is a bit involved just because the much simpler "add_test"
-# command which is currently commented out (see below) requires
-# "-C Release" to be passed along "ctest", which is inconvenient.
-# Hence, since to avoid this inconvenience we use the basic "add_test"
-# syntax which does not allow to pass a WORKING_DIRECTORY parameter,
-# and therefore we need to write a small bash/bat script
-# to cd in the correct directory upfront. A bit clumsy, but it works
-set(PGREGRESS_BINARY ${PostgreSQL_ROOT})
-STRING(REGEX REPLACE "\\\\" "/" PGREGRESS_BINDIR ${PostgreSQL_ROOT})
+# The test is a bit involved, but it works on all platforms
+# as of PostgreSQL 9.5
+macro (run_pg_config arg var)
+  execute_process(COMMAND ${PostgreSQL_CONFIG_DIR}/pg_config ${arg}
+                  RESULT_VARIABLE pgsql_config_result
+                  OUTPUT_VARIABLE ${var}
+                  OUTPUT_STRIP_TRAILING_WHITESPACE)
+  fail_if (NOT ${pgsql_config_result} EQUAL 0 OR NOT ${var})
+endmacro ()
+run_pg_config (--bindir PG_BINDIR)
+run_pg_config (--sharedir PG_SHAREDIR)
+run_pg_config (--pkglibdir PG_PKGLIBDIR)
+set(PG_EXTENSIONDIR "${PG_SHAREDIR}/extension")
 if(WIN32 AND NOT UNIX)
-  set(PGREGRESS_BINARY "${PGREGRESS_BINARY}\\bin\\pg_regress.exe")
+  string(REGEX REPLACE "/" "\\\\" PG_EXTENSIONDIR ${PG_EXTENSIONDIR})
+  set(PGREGRESS_BINARY "${PG_BINDIR}\\pg_regress.exe")
 else(WIN32 AND NOT UNIX)
-  set(PGREGRESS_BINARY "${PGREGRESS_BINDIR}/bin/pg_regress")
+  run_pg_config (--pgxs PG_MAKEFILE)
+  get_filename_component(PG_MAKEFILESDIR ${PG_MAKEFILE} PATH)
+  set(PGREGRESS_BINARY "${PG_MAKEFILESDIR}/../test/regress/pg_regress")
 endif(WIN32 AND NOT UNIX)
-set(testPgSQLName "${CMAKE_SOURCE_DIR}/Code/PgSQL/rdkit/pg_regress")
-set(PGREGRESS_BINDIR "${PGREGRESS_BINDIR}/bin")
+fail_if(NOT EXISTS ${PGREGRESS_BINARY})
+set(testPgSQLName "${CMAKE_CURRENT_SOURCE_DIR}/pgsql_regress")
+set(installPgSQLName "${CMAKE_CURRENT_SOURCE_DIR}/pgsql_install")
 if(WIN32 AND NOT UNIX)
+  set(testPgSQLCommand "")
   set(testPgSQLName "${testPgSQLName}.bat")
+  set(installPgSQLName "${installPgSQLName}.bat")
   set(testPgSQLHead "cd %~dp0\n")
+  set(installCopyCommand "copy /Y")
+  set(PG_RDKIT_LIB_SRC "rdkit.dll")
+  set(PG_RDKIT_LIB_DEST "rdkit.dll")
 else(WIN32 AND NOT UNIX)
+  set(testPgSQLCommand "sh")
   set(testPgSQLName "${testPgSQLName}.sh")
-  set(testPgSQLHead "cd $$(dirname $$0)\n")
+  set(installPgSQLName "${installPgSQLName}.sh")
+  set(testPgSQLHead "cd \"$(dirname \"$0\")\"\n")
+  set(installCopyCommand "cp")
+  set(PG_RDKIT_LIB_SRC "librdkit.so")
+  set(PG_RDKIT_LIB_DEST "rdkit.so")
 endif(WIN32 AND NOT UNIX)
 set(testPgSQLBody "\"${PGREGRESS_BINARY}\" --inputdir=sql "
-              "--bindir=\"${PGREGRESS_BINDIR}\" --user=postgres rdkit-91 "
-              "props btree molgist bfpgist-91 sfpgist slfpgist fps reaction "
-              "${avalonRegress} ${inchiRegress}\n")
+    "--psqldir=\"${PG_BINDIR}\" rdkit-91 "
+    "props btree molgist bfpgist-91 sfpgist slfpgist fps reaction "
+    "${avalonRegress} ${inchiRegress}\n")
+set(installPgSQLBody
+    "${installCopyCommand} \"${CMAKE_CURRENT_SOURCE_DIR}/rdkit.sql91.in\" "
+    "\"${CMAKE_CURRENT_SOURCE_DIR}/rdkit--${PG_EXTVERSION}.sql\"\n"
+    "${installCopyCommand} \"${CMAKE_CURRENT_SOURCE_DIR}/rdkit--${PG_EXTVERSION}.sql\" \"${PG_EXTENSIONDIR}\"\n"
+    "${installCopyCommand} \"${CMAKE_CURRENT_SOURCE_DIR}/rdkit.control\" \"${PG_EXTENSIONDIR}\"\n"
+    "${installCopyCommand} \"${CMAKE_CURRENT_BINARY_DIR}/${PG_RDKIT_LIB_SRC}\" "
+    "\"${PG_PKGLIBDIR}/${PG_RDKIT_LIB_DEST}\"\n")
 file(WRITE ${testPgSQLName} ${testPgSQLHead} ${testPgSQLBody})
-add_test(testPgSQL ${testPgSQLName})
-#add_test(NAME testPgSQL
-#              WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/Code/PgSQL/rdkit
-#              COMMAND ${PostgreSQL_ROOT}/bin/pg_regress --inputdir=sql
-#              --bindir=${PostgreSQL_ROOT}/bin --user=postgres rdkit-91
-#              props btree molgist bfpgist-91 sfpgist slfpgist fps reaction
-#              ${avalonRegress} ${inchiRegress})
+file(WRITE ${installPgSQLName} ${installPgSQLBody})
+add_test(testPgSQL ${testPgSQLCommand} ${testPgSQLName})
