- improved Code/PgSQL/rdkit/CMakeLists.txt

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(EXTENSION "rdkit")
 include_directories(${PostgreSQL_INCLUDE_DIRS})
 if(WIN32)
   include_directories(${PostgreSQL_INCLUDE_DIR}/server/port/win32)
@@ -18,29 +19,29 @@ if(MSVC)
   add_definitions(-DWIN32 -DBUILDING_MODULE -DNOMINMAX)
 endif(MSVC)
 link_directories(${PostgreSQL_LIBRARY_DIRS})
-add_library(rdkit SHARED
+add_library(${EXTENSION} SHARED
             adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
             rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
-target_link_libraries(rdkit ${PostgreSQL_LIBRARIES})
+target_link_libraries(${EXTENSION} ${PostgreSQL_LIBRARIES})
 if(WIN32)
-  target_link_libraries(rdkit postgres)
+  target_link_libraries(${EXTENSION} postgres)
 endif(WIN32)
 set(avalonRegress "")
 set(inchiRegress "")
 if(RDK_BUILD_AVALON_SUPPORT)
   set(avalonRegress "avalon")
-  target_link_libraries(rdkit AvalonLib avalon_clib)
+  target_link_libraries(${EXTENSION} AvalonLib avalon_clib)
 endif(RDK_BUILD_AVALON_SUPPORT)
 if(RDK_BUILD_INCHI_SUPPORT)
   set(inchiRegress "inchi")
-  target_link_libraries(rdkit RDInchiLib Inchi)
+  target_link_libraries(${EXTENSION} RDInchiLib Inchi)
 endif(RDK_BUILD_INCHI_SUPPORT)
-target_link_libraries(rdkit MolHash FMCS ChemReactions ChemTransforms
+target_link_libraries(${EXTENSION} MolHash FMCS ChemReactions ChemTransforms
                       FileParsers SmilesParse Fingerprints Subgraphs Descriptors
                       PartialCharges SubstructMatch GraphMol DataStructs Depictor
                       RDGeometryLib RDGeneral)
 if(RDK_BUILD_THREADSAFE_SSS)
-  target_link_libraries(rdkit ${RDKit_THREAD_LIBS})
+  target_link_libraries(${EXTENSION} ${RDKit_THREAD_LIBS})
 endif(RDK_BUILD_THREADSAFE_SSS)
 
 if(NOT DEFINED ${PostgreSQL_ROOT})
@@ -66,6 +67,7 @@ endmacro ()
 run_pg_config (--bindir PG_BINDIR)
 run_pg_config (--sharedir PG_SHAREDIR)
 run_pg_config (--pkglibdir PG_PKGLIBDIR)
+set(PG_PKGLIBDIR "${PG_PKGLIBDIR}/")
 set(PG_EXTENSIONDIR "${PG_SHAREDIR}/extension")
 if(WIN32 AND NOT UNIX)
   set(PGREGRESS_BINARY "${PG_BINDIR}\\pg_regress.exe")
@@ -88,18 +90,19 @@ if(WIN32 AND NOT UNIX)
   set(testPgSQLName "${testPgSQLName}.bat")
   set(installPgSQLName "${installPgSQLName}.bat")
   set(installCopyCommand "copy /Y")
-  set(PG_RDKIT_LIB_SRC "rdkit.dll")
-  set(PG_RDKIT_LIB_DEST "rdkit.dll")
+  set(PG_RDKIT_LIB_SRC "${EXTENSION}.dll")
+  set(PG_RDKIT_LIB_DEST "${EXTENSION}.dll")
   set(PGREGRESS_BINDIR_SWITCH "bindir")
   string(REGEX REPLACE "/" "\\\\" PG_CURRENT_SOURCE_DIR ${PG_CURRENT_SOURCE_DIR})
   string(REGEX REPLACE "/" "\\\\" PG_CURRENT_BINARY_DIR ${PG_CURRENT_BINARY_DIR})
+  string(REGEX REPLACE "/" "\\\\" PG_PKGLIBDIR ${PG_PKGLIBDIR})
 else(WIN32 AND NOT UNIX)
   set(testPgSQLCommand "sh")
   set(testPgSQLName "${testPgSQLName}.sh")
   set(installPgSQLName "${installPgSQLName}.sh")
   set(installCopyCommand "cp")
-  set(PG_RDKIT_LIB_SRC "librdkit.so")
-  set(PG_RDKIT_LIB_DEST "rdkit.so")
+  set(PG_RDKIT_LIB_SRC "lib${EXTENSION}.so")
+  set(PG_RDKIT_LIB_DEST "${EXTENSION}.so")
   set(PGREGRESS_BINDIR_SWITCH "psqldir")
 endif(WIN32 AND NOT UNIX)
 set(testPgSQLBody "cd \"${PG_CURRENT_SOURCE_DIR}\"\n"
@@ -107,13 +110,31 @@ set(testPgSQLBody "cd \"${PG_CURRENT_SOURCE_DIR}\"\n"
     "--${PGREGRESS_BINDIR_SWITCH}=\"${PG_BINDIR}\" rdkit-91 "
     "props btree molgist bfpgist-91 sfpgist slfpgist fps reaction "
     "${avalonRegress} ${inchiRegress}\n")
+file(STRINGS ${PG_CURRENT_SOURCE_DIR}${EXTENSION}.control
+    PG_EXTVERSION LIMIT_COUNT 1 REGEX default_version)
+string(REPLACE " " ";" tokList ${PG_EXTVERSION})
+list(GET tokList -1 PG_EXTVERSION)
+string(REGEX REPLACE "'" "" PG_EXTVERSION ${PG_EXTVERSION})
+if(MSVC)
+  set(PG_RDKIT_LIB_SRC "${CMAKE_BUILD_TYPE}\\${PG_RDKIT_LIB_SRC}")
+endif(MSVC)
 set(installPgSQLBody
-    "${installCopyCommand} \"${PG_CURRENT_SOURCE_DIR}rdkit.sql91.in\" "
-    "\"${PG_CURRENT_SOURCE_DIR}rdkit--${PG_EXTVERSION}.sql\"\n"
-    "${installCopyCommand} \"${PG_CURRENT_SOURCE_DIR}rdkit--${PG_EXTVERSION}.sql\" \"${PG_EXTENSIONDIR}\"\n"
-    "${installCopyCommand} \"${PG_CURRENT_SOURCE_DIR}rdkit.control\" \"${PG_EXTENSIONDIR}\"\n"
+    "${installCopyCommand} \"${PG_CURRENT_SOURCE_DIR}${EXTENSION}.sql91.in\" "
+    "\"${PG_CURRENT_SOURCE_DIR}${EXTENSION}--${PG_EXTVERSION}.sql\"\n"
+    "${installCopyCommand} \"${PG_CURRENT_SOURCE_DIR}${EXTENSION}--${PG_EXTVERSION}.sql\" \"${PG_EXTENSIONDIR}\"\n"
+    "${installCopyCommand} \"${PG_CURRENT_SOURCE_DIR}${EXTENSION}.control\" \"${PG_EXTENSIONDIR}\"\n"
     "${installCopyCommand} \"${PG_CURRENT_BINARY_DIR}${PG_RDKIT_LIB_SRC}\" "
-    "\"${PG_PKGLIBDIR}/${PG_RDKIT_LIB_DEST}\"\n")
+    "\"${PG_PKGLIBDIR}${PG_RDKIT_LIB_DEST}\"\n")
 file(WRITE ${testPgSQLName} ${testPgSQLBody})
 file(WRITE ${installPgSQLName} ${installPgSQLBody})
+message("\n"
+        "=====================================================================\n"
+        "After building, check\n"
+        "${installPgSQLName}\n"
+        "for correctness of installation paths. If everything is OK, gain \n"
+        "administrator privileges, stop the PostgreSQL service, run\n"
+        "${installPgSQLName}\n"
+        "to install the PostgreSQL RDKit cartridge, then start again\n"
+        "the PostgreSQL service\n"
+        "=====================================================================\n")
 add_test(testPgSQL ${testPgSQLCommand} ${testPgSQLName})
