- updated Avalon Tools patch and test to version 1.2 - added support for statically linking RDKit libraries to the PostgreSQL cartridge

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -19,6 +19,7 @@ if(MSVC)
   add_definitions(-DWIN32 -DBUILDING_MODULE -DNOMINMAX)
 endif(MSVC)
 link_directories(${PostgreSQL_LIBRARY_DIRS})
+link_directories(${RDKit_LibDir})
 add_library(${EXTENSION} SHARED
             adapter.cpp bfp_op.c cache.c guc.c low_gist.c mol_op.c
             rdkit_gist.c rdkit_io.c rxn_op.c sfp_op.c)
@@ -28,18 +29,43 @@ if(WIN32)
 endif(WIN32)
 set(avalonRegress "")
 set(inchiRegress "")
+set(pgRDKitLibsHead "")
+set(pgRDKitLibPrefix "")
+set(pgRDKitLibSuffix "")
+set(pgRDKitLibsTail "")
+if(RDK_PGSQL_STATIC AND (NOT MSVC))
+  set(pgRDKitLibsHead "-Wl,--start-group;")
+  set(pgRDKitLibPrefix "-l")
+  set(pgRDKitLibSuffix "_static")
+  set(pgRDKitLibsTail ";-Wl,--end-group")
+endif()
+set(pgRDKitLibList "")
 if(RDK_BUILD_AVALON_SUPPORT)
   set(avalonRegress "avalon")
-  target_link_libraries(${EXTENSION} AvalonLib avalon_clib)
+  set(pgRDKitLibList "${pgRDKitLibList}AvalonLib;avalon_clib;")
 endif(RDK_BUILD_AVALON_SUPPORT)
 if(RDK_BUILD_INCHI_SUPPORT)
   set(inchiRegress "inchi")
-  target_link_libraries(${EXTENSION} RDInchiLib Inchi)
+  set(pgRDKitLibList "${pgRDKitLibList}RDInchiLib;Inchi;")
 endif(RDK_BUILD_INCHI_SUPPORT)
-target_link_libraries(${EXTENSION} MolHash FMCS ChemReactions ChemTransforms
-                      FileParsers SmilesParse Fingerprints Subgraphs Descriptors
-                      PartialCharges SubstructMatch GraphMol DataStructs Depictor
-                      RDGeometryLib RDGeneral)
+set(pgRDKitLibList "${pgRDKitLibList}"
+    "MolHash;FMCS;ChemReactions;ChemTransforms;"
+    "FileParsers;SmilesParse;Fingerprints;Subgraphs;Descriptors;"
+    "PartialCharges;SubstructMatch;GraphMol;DataStructs;Depictor;"
+    "RDGeometryLib;RDGeneral")
+foreach(pgRDKitLib ${pgRDKitLibList})
+  set(pgRDKitLibs "${pgRDKitLibs}${pgRDKitLibPrefix}${pgRDKitLib}${pgRDKitLibSuffix};")
+endforeach()
+set(pgRDKitLibs "${pgRDKitLibsHead}${pgRDKitLibs}${pgRDKitLibsTail}")
+if(RDK_PGSQL_STATIC AND (NOT MSVC))
+  string(REGEX REPLACE ";" " " pgRDKitLibs "${pgRDKitLibs}")
+  string(REGEX REPLACE " $" "" pgRDKitLibs "${pgRDKitLibs}")
+else()
+  foreach(pgRDKitLib ${pgRDKitLibList})
+    target_link_libraries(${EXTENSION} ${pgRDKitLibs})
+  endforeach()
+endif()
+message("${pgRDKitLibs}")
 if(RDK_BUILD_THREADSAFE_SSS)
   target_link_libraries(${EXTENSION} ${RDKit_THREAD_LIBS})
 endif(RDK_BUILD_THREADSAFE_SSS)
