- simplified Code/PgSQL/rdkit/CMakeLists.txt for static/dynamic   linking of RDKit libraries to the PostgreSQL extension

--- a/Code/PgSQL/rdkit/CMakeLists.txt
+++ b/Code/PgSQL/rdkit/CMakeLists.txt
@@ -29,15 +29,9 @@ if(WIN32)
 endif(WIN32)
 set(avalonRegress "")
 set(inchiRegress "")
-set(pgRDKitLibsHead "")
-set(pgRDKitLibPrefix "")
 set(pgRDKitLibSuffix "")
-set(pgRDKitLibsTail "")
 if(RDK_PGSQL_STATIC AND (NOT MSVC))
-  set(pgRDKitLibsHead "-Wl,--start-group;")
-  set(pgRDKitLibPrefix "-l")
   set(pgRDKitLibSuffix "_static")
-  set(pgRDKitLibsTail ";-Wl,--end-group")
 endif()
 set(pgRDKitLibList "")
 if(RDK_BUILD_AVALON_SUPPORT)
@@ -54,18 +48,9 @@ set(pgRDKitLibList "${pgRDKitLibList}"
     "PartialCharges;SubstructMatch;GraphMol;DataStructs;Depictor;"
     "RDGeometryLib;RDGeneral")
 foreach(pgRDKitLib ${pgRDKitLibList})
-  set(pgRDKitLibs "${pgRDKitLibs}${pgRDKitLibPrefix}${pgRDKitLib}${pgRDKitLibSuffix};")
+  set(pgRDKitLibs "${pgRDKitLibs}${pgRDKitLib}${pgRDKitLibSuffix};")
 endforeach()
-set(pgRDKitLibs "${pgRDKitLibsHead}${pgRDKitLibs}${pgRDKitLibsTail}")
-if(RDK_PGSQL_STATIC AND (NOT MSVC))
-  string(REGEX REPLACE ";" " " pgRDKitLibs "${pgRDKitLibs}")
-  string(REGEX REPLACE " $" "" pgRDKitLibs "${pgRDKitLibs}")
-else()
-  foreach(pgRDKitLib ${pgRDKitLibList})
-    target_link_libraries(${EXTENSION} ${pgRDKitLibs})
-  endforeach()
-endif()
-message("${pgRDKitLibs}")
+target_link_libraries(${EXTENSION} ${pgRDKitLibs})
 if(RDK_BUILD_THREADSAFE_SSS)
   target_link_libraries(${EXTENSION} ${RDKit_THREAD_LIBS})
 endif(RDK_BUILD_THREADSAFE_SSS)
